--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": ".eslintrc.js",
-  "dependencies": {},
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,5 +15,7 @@
   "bugs": {
     "url": "https://github.com/Sterpa/components_1808_2130-1/issues"
   },
-  "homepage": "https://github.com/Sterpa/components_1808_2130-1#readme"
+  "homepage": "https://github.com/Sterpa/components_1808_2130-1#readme",
+  "dependencies": {},
+  "devDependencies": {}
 }
