--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "components_1808_2130-1",
   "version": "1.0.0",
-  "description": "",
+  "description": "JS_Chat",
   "main": ".eslintrc.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "./node_modules/.bin/eslint components/**/*.js",
+    "serve": "./node_modules/.bin/static-server .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pug": "pug components/menu/menu.pug --client --extension=pug.js --name=menuTmpl"
   },
   "repository": {
     "type": "git",
@@ -17,5 +20,10 @@
   },
   "homepage": "https://github.com/Sterpa/components_1808_2130-1#readme",
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^4.1.1",
+    "eslint-config-google": "^0.9.1",
+    "pug": "^2.0.0-rc.4",
+    "static-server": "^2.0.5"
+  }
 }
